--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -8,9 +8,9 @@ import Button from "./Button";
 import PhoneIcon from "./Phone";
 
 const MainNavMenu = [
-  { id: "home", label: "Home", slug: "/" },
-  { id: "about", label: "About Us", slug: "/about-us" },
-  { id: "contact", label: "Contact", slug: "/contact-us", position: "append", weight: 100 },
+  // { id: "home", label: "Home", slug: "/" },
+  { id: "quote", label: "Get Quote", slug: "/", position: "append", weight: 100 },
+  { id: "partner", label: "Partner With Us", slug: "/partners", weight: 10 },
 ];
 
 const breakpoint = "lg";
