--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -38,7 +38,7 @@ const breakpoint = "lg";
     barMenu={{
       menuItem: { component: MenuItem, class: "menu-item px-[var(--spacing-sm)] text-heading" },
       submenuItem: { component: MenuItem, class: "submenu-class bg-bg z-[999999]" },
-      listClass: "flex gap-[var(--spacing-md)] uppercase font-thin"
+      listClass: "flex gap-[var(--spacing-md)] uppercase font-light"
     }}
     hamburgerMenu={{
       hamburgerIconClass: "custom-hamburger-icon text-primary",
