--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -53,7 +53,7 @@ const breakpoint = "lg";
   />
   <div class="button-container">
     <div class="hidden lg:flex">
-      <Button variant="primary" href={`/contact-us`}>{ContactData.phone}</Button>
+      <Button variant="primary" href={`/`}>{ContactData.phone}</Button>
     </div>
     <a href={`tel:${ContactData.phone}`}>
       <PhoneIcon className="lg:hidden block h-6 w-auto text-bg-dark"></PhoneIcon>
