--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -116,7 +116,7 @@ import BaseLayout from "@/layouts/BaseLayout.astro";
     buttons={[
       {
         text: "Book a Consultation",
-        link: "/contact-us",
+        link: "/",
         class: "btn-primary",
       },
     ]}
