--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -37,7 +37,7 @@ resetSectionIds();
   <Theme />
   <slot name="head" />
 </head>
-<body class="m-0 p-0 w-full h-full">
+<body class="m-0 p-0 w-full h-full overflow-x-hidden">
   <AnimationLayout>
     <Header />
     <main class="min-h-[80vh] bg-[var(--color-bg)] text-[var(--color-text)]">
