--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -10,7 +10,7 @@ const FooterMenu = [
   { id: "cookie", label: "Cookie Policy", slug: "/cookie-policy", weight: 20 },
 ];
 ---
-<footer class="bg-primary text-center flex justify-center items-center">
+<footer class="bg-primary text-center flex py-[var(--spacing-sm)] justify-center items-center">
   <div class="head-foot-container flex flex-col lg:flex-row gap-[var(--spacing-sm)] lg:gap-0">
   <a href="/" class="flex items-center justify-center">
     <Image
