--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,9 +7,11 @@ import HeroBg from "@/assets/background.svg";
 import { SiteData } from "@/content/SiteData";
 import { Image } from "astro:assets";
 import SolarTrustTeam from "@/assets/Solar-Trust-Team.webp";
+import AndrewVideo from "@/assets/andrew-video.mp4";
 import Owner from "@/assets/paul.jpeg";
 import SolarPanels from "@/assets/solar-cell.jpg";
 import Heading from "@/components/Heading";
+import Video from "@/components/Video.astro";
 import LogoLoop from "@/components/LoopComponents/LogoLoop.astro";
 import BaseLayout from "@/layouts/BaseLayout.astro";
 ---
@@ -50,7 +52,7 @@ import BaseLayout from "@/layouts/BaseLayout.astro";
       ]}
       ,
       description=`"At ${SiteData.title}, our mission is to prioritize you. When you choose to work with us, you’re not just another client—you’re part of our family. Unlike many companies tied to specific solar installers, we work solely for your best interests. We fight to secure the highest-quality products at the most competitive prices and make sure the process is smooth and stress-free every step of the way. From the first consultation to turning on your solar system, we’ll be by your side, ready to answer any question or resolve any issue. With us, you're never on your own—just call, and we’re here to help."`
-      descriptionClass="lg:w-3/5 w-full text-bg text-center text-xl lg:text-2xl italic"
+      descriptionClass="lg:w-3/5 w-full text-bg text-center text-xl lg:text-xl italic"
       headingAreaClass="flex flex-col items-center justify-center text-center gap-[var(--spacing-xs)]"
       childPlacement="top-content-section",
     >
@@ -122,7 +124,17 @@ import BaseLayout from "@/layouts/BaseLayout.astro";
     ]}
     childSlotClass="flex justify-center items-center flex-col lg:flex-row gap-[var(--spacing-lg)] w-full lg:w-1/3"
   >
-    <Image
+  <Video
+    src={AndrewVideo}
+    title="Solar Trust Overview"
+    class="w-auto h-60 lg:h-80 rounded-lg shadow-lg"
+    loading="lazy"
+    decoding="async"
+    quality={60}
+    fetchpriority="low"
+    controls="true"
+  />
+    <!-- <Image
       src={SolarTrustTeam}
       alt="Solar Trust Team"
       class="w-355 h-80 my-[var(--spacing-sm)]"
@@ -133,7 +145,7 @@ import BaseLayout from "@/layouts/BaseLayout.astro";
       decoding="async"
       quality={60}
       fetchpriority="low"
-    />
+    /> -->
   </Section>
 
   <!-- Clients -->
